Modificados archivos *.scss

--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -12,6 +12,12 @@
         @content;
     }
 }
+
+@mixin tablet2 {
+    @media (min-width: v.$tablet2) {
+        @content;
+    }
+}
   
 @mixin desktop {
     @media (min-width: v.$desktop) {
