--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -4,6 +4,7 @@ $fuente_principal: 'Poppins', sans-serif;
 // Tamaño de Media Queries
 $telefono: 480px;
 $tablet: 768px;
+$tablet2: 912px;
 $desktop: 1024px;
 
 // Colores
