--- a/src/scss/ui/_botones.scss
+++ b/src/scss/ui/_botones.scss
@@ -10,4 +10,10 @@
 	border: 2px solid v.$blanco;
 	margin-top: 2rem;
 	display: block;
+	@include m.tablet {
+	padding: 1.2rem 2rem;
+	}
+	@include m.tablet2 {
+		padding: 1.2rem 4rem;
+	}
 }
