Modificación a los  archivos *.scss

--- a/src/scss/ui/_planes.scss
+++ b/src/scss/ui/_planes.scss
@@ -22,6 +22,12 @@
 		margin-inline: auto;
 		margin-block-start: 10rem;
 	}
+	@include m.tablet2 {
+		width: 90%;
+	}
+	@include m.desktop {
+		width: 80%;
+	}
 	
 	.plan {
 		flex-grow: 1;
@@ -30,16 +36,12 @@
 		border-bottom: 1px solid #e1e1e1;
 		@include m.tablet {
 			border: none;
-			max-width: calc(73rem / 3);
 			transition-property: transform;
 			transition-duration: 300ms;
 
 			&:hover {
 				transform: scale(1.1);
 			}
-		}
-		@include m.tablet2 {
-			max-width: 100%;
 		}
 
 		&.inicio {
